gitops/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: notesapp-ingress
  namespace: devops-project

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /notes
        pathType: Prefix

        backend:
          service:
            name: backend-service
            port:
              number: 80

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service
            port:
              number: 80
